--- a/UserStore.WEB/appsettings.json
+++ b/UserStore.WEB/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=GOLDMINE;Database=UserStore4;Trusted_Connection=True;MultipleActiveResultSets=true"
-    //"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=UserStore4;Trusted_Connection=True;MultipleActiveResultSets=true"
+   // "DefaultConnection": "Server=GOLDMINE;Database=UserStore4;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=UserStore4;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=UserStore4;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
